Actually fixed backface-visibility for Safari

--- a/style.css
+++ b/style.css
@@ -71,8 +71,11 @@ body {
 	position: absolute;
 	width: 95%;
 	height: 95%;
-	backface-visibility: hidden;
-	-webkit-backface-visibility: hidden; /* Safari */
+    -webkit-perspective: 0;
+    -webkit-backface-visibility: hidden;
+    -webkit-transform: translate3d(0,0,0);
+    visibility:visible;
+    backface-visibility: hidden;
 }
 
 .flip-card-back {
